Removing commented lines, and dirty bits.